fix initial navbar and header overlap

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -36,13 +36,13 @@
 
 .container-body {
     margin-left: 15%;
-    margin-right: 15%
+    margin-right: 15%;
 }
 
 .header {
     background-image: url("../../images/profile1.jpg");
     width: 100%;
-    height: 500px;
+    height: 550px;
     background-attachment: fixed;
     background-position-y: 15%;
     background-repeat: no-repeat;
@@ -53,7 +53,7 @@
 
 .header .firstname {
     font-family: 'JetBrains Mono';
-    font-size: 10vw;
+    font-size: 9vw;
     animation: 3s slide-right;
     animation-delay: 0s;
 }
@@ -70,14 +70,14 @@
 
 .header .lastname {
     font-family: 'JetBrains Mono';
-    font-size: 10vw;
+    font-size: 8vw;
     animation: 3s slide-left;
     animation-delay: 0s;
 }
   
 @keyframes slide-left {
     from {
-        padding-left: 100vw;
+        padding-left: 200vw;
     }
 
     to {
@@ -99,10 +99,17 @@
 
 
 .header-nav {
-    margin: auto;
     font-size: 3vw;
     position: absolute;
     bottom: 0;
+    left: 0px;
+    right: 0px;
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+.header-nav .col-3 {
+    text-align: center;
 }
 
 .header-nav a {
